IV Development History

================================
Version 0.0.2 (June 13, 2010)

 * Added src/ directory
 * Added manpage
 * Text addition mode now triggered by spacebar
 * Eradicated (most) memory leaks


================================

Version 0.0.1 (June 12, 2010)

 * Basic editing ability, without tabs
 * First release
